# AI-Driven-Infrastructure-Anomaly-Detector

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
config/: default.yaml  production.yaml  test.yaml
data/: __init__.py
data/scripts/: generate_sample.py
deploy/docker/: Dockerfile  docker-compose.yml  prometheus.yml
deploy/grafana/dashboards/: anomaly-detector-ml-models.json  anomaly-detector-overview.json
deploy/grafana/provisioning/dashboards/: dashboards.yaml
deploy/grafana/provisioning/datasources/: datasources.yaml
deploy/helm/anomaly-detector/: Chart.yaml  values.yaml
deploy/helm/anomaly-detector/templates/: TEMPLATE  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pdb.yaml  pvc.yaml  secret.yaml  service-monitor.yaml  service.yaml
deploy/kubernetes/: deployment.yaml  ingress.yaml  secrets.yaml
docs/: ARCHITECTURE.md  OPERATIONS.md
models/scripts/: train.py
notebooks/: exploration.ipynb
src/: __init__.py  main.py
src/alerting/: __init__.py  dispatcher.py  evaluator.py  models.py  service.py
src/api/: __init__.py  app.py  error_handler.py  routes.py  schemas.py
src/core/: __init__.py  circuit_breaker.py  config.py  database.py  errors.py  health.py  logging.py  security.py
src/ingestion/: __init__.py  feature_engineering.py  kafka_consumer.py  models.py  orchestrator.py  prometheus_client.py
src/ml_processing/: __init__.py  drift_detector.py  ensemble.py  holt_winters.py  isolation_forest.py  lstm_autoencoder.py  model_manager.py  pipeline.py
tests/: conftest.py
tests/integration/: test_api.py  test_pipeline.py
tests/performance/: test_latency.py
tests/unit/: test_alerting.py  test_circuit_breaker.py  test_config.py  test_errors.py  test_ingestion.py  test_ml_processing.py  test_security.py
