[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anomaly-detector"
version = "1.0.0"
description = "AI-Driven Infrastructure Anomaly Detector — predictive ML-powered anomaly detection for server infrastructure"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Anomaly Detector Team"},
]
keywords = ["anomaly-detection", "machine-learning", "sre", "monitoring", "infrastructure"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "asyncpg>=0.29.0",
    "structlog>=24.1.0",
    "scikit-learn>=1.4.0",
    "scipy>=1.12.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "joblib>=1.3.0",
    "statsmodels>=0.14.0",
    "prometheus-client>=0.20.0",
    "pyjwt[crypto]>=2.8.0",
    "python-multipart>=0.0.9",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
full = [
    "torch>=2.2.0",
    "influxdb-client[async]>=1.40.0",
    "aiokafka>=0.9.0",
    "aiosmtplib>=3.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pip-audit>=0.2.0",
    "bandit>=1.7.0",
    "httpx>=0.27.0",
]

[project.scripts]
anomaly-detector = "src.main:main"
anomaly-train = "models.scripts.train:main"
anomaly-generate-data = "data.scripts.generate_sample:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow",
    "integration: marks integration tests",
    "performance: marks performance benchmarks",
]
addopts = "-v --tb=short -x"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "C4", "T20", "RUF"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
